--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -42,6 +42,7 @@ Imports:
     dplyr,
     edgeTransport,
     gdata,
+    Hmisc,
     luscale,
     magrittr,
     mgsub,
@@ -49,6 +50,7 @@ Imports:
     quitte,
     readODS,
     readr,
+    readODS,
     readxl,
     reshape,
     reshape2,
