--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,7 @@ export(toolCubicFunctionAggregate)
 export(toolCubicFunctionDisaggregate)
 export(toolSolarFunctionAggregate)
 import(mrcommons)
+importFrom(Hmisc,wtd.quantile)
 importFrom(R.utils,isZero)
 importFrom(assertr,assert)
 importFrom(assertr,in_set)
@@ -172,11 +173,8 @@ importFrom(quitte,overwrite)
 importFrom(quitte,removeColNa)
 importFrom(quitte,revalue.levels)
 importFrom(quitte,seq_range)
-<<<<<<< HEAD
-importFrom(readODS,read_ods)
-=======
 importFrom(quitte,sum_total_)
->>>>>>> de660ff (stash stuff)
+importFrom(readODS,read_ods)
 importFrom(readr,col_character)
 importFrom(readr,col_double)
 importFrom(readr,col_integer)
