--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(calcCementShare)
 export(calcChemicalFeedstocksShare)
 export(calcClinker_to_cement_ratio)
 export(calcIEA_WEO_2021)
+export(calcIndustry_Value_Added)
 export(calcSecondary_steel_limits)
 export(calcShareIndFE)
 export(calcSteel_Projections)
@@ -164,12 +165,15 @@ importFrom(nnls,nnls)
 importFrom(quitte,add_countrycode_)
 importFrom(quitte,as.quitte)
 importFrom(quitte,calc_addVariable)
+importFrom(quitte,calc_mode)
 importFrom(quitte,cartesian)
 importFrom(quitte,character.data.frame)
+importFrom(quitte,duplicate)
 importFrom(quitte,getVars)
 importFrom(quitte,inline.data.frame)
 importFrom(quitte,interpolate_missing_periods)
 importFrom(quitte,interpolate_missing_periods_)
+importFrom(quitte,list_to_data_frame)
 importFrom(quitte,madrat_mule)
 importFrom(quitte,overwrite)
 importFrom(quitte,removeColNa)
