--- a/NAMESPACE
+++ b/NAMESPACE
@@ -169,6 +169,7 @@ importFrom(quitte,calc_mode)
 importFrom(quitte,cartesian)
 importFrom(quitte,character.data.frame)
 importFrom(quitte,duplicate)
+importFrom(quitte,duplicate_)
 importFrom(quitte,getVars)
 importFrom(quitte,inline.data.frame)
 importFrom(quitte,interpolate_missing_periods)
